kubernetes/ns-common/elk/kibana/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: common
spec:
  selector:
    app: kibana-app
  ports:
  - port: 5601
    targetPort: 5601
    name: web
